feat:list organization from user side
implmented list organization function in userHandler
